# koompi-orch

./: README.md  index.html  package.json  tailwind.config.js
docs/superpowers/plans/: 2026-03-14-koompi-orch-plan-overview.md  2026-03-14-plan-1-foundation.md  2026-03-14-plan-2-agent-engine.md  2026-03-14-plan-3-workspace-git.md  2026-03-14-plan-4a-orchestration-engine.md  2026-03-14-plan-4b-pipelines-recovery.md  2026-03-14-plan-5a-core-ui.md  2026-03-14-plan-5b-rich-ui.md
docs/superpowers/specs/: 2026-03-14-koompi-orch-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: config.rs  input.rs  mod.rs  parser.rs  presets.rs  process.rs  registry.rs
src-tauri/src/config/: settings.rs
src-tauri/src/db/: migrate.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial_schema.surql
src-tauri/src/git/: commit.rs  diff.rs  merge.rs  mod.rs  remote.rs
src-tauri/src/ipc/: agent_commands.rs  commands.rs  mod.rs  spawner.rs
src-tauri/src/orchestrator/: engine.rs  governor.rs  mod.rs  pipeline.rs  recovery.rs  router.rs
src-tauri/src/workspace/: conflict.rs  lock.rs  manager.rs  mod.rs  snapshot.rs  status.rs
src/app/: App.tsx  router.tsx  routes.test.tsx
src/hooks/: useAgentEvents.ts  useBootstrap.ts  useLiveQuery.test.ts  useLiveQuery.ts
src/lib/: ipc.ts  keybindings.ts
src/stores/: agentStore.ts  notificationStore.ts  settingsStore.ts  workspaceStore.ts
src/styles/: globals.css
(+41 files in other folders)
